# EDGE

./: CMakeLists.txt
source/: PCH.h  fs_triangle.sc  main.cpp  vs_triangle.sc
source/render/: triangle.cpp  triangle.h
